--- a/index.html
+++ b/index.html
@@ -11,9 +11,85 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    <header class="p-4 mb-4 bg-dark text-light">
+      <h1>Weather Dashboard</h1>
+    </header>
+
+    <main class="container">
+      <section class="row">
+        <div class="col-3">
+          <h2>Search for a city</h2>
+          <form>
+            <div class="form-group mb-3">
+              <input
+                type="text"
+                class="form-control mb-3"
+                placeholder="Denver"
+              />
+              <button class="btn btn-primary" type="button" id="button-addon1">
+                Search
+              </button>
+            </div>
+          </form>
+        </div>
+
+        <div class="col-9">
+          <div class="row justify-content-between">
+            <div class="row">
+              <div class="mb-4 border border-dark col-12">
+                <h1>Current City</h1>
+                <p>Temp</p>
+                <p>Wind</p>
+                <p>Humidity</p>
+              </div>
+            </div>
+            <div class="row justify-content-between 5-days-ahead">
+              <h3 class="px-0">5 Day Forecast:</h3>
+              <div class="col-2 bg-dark text-white pb-3">
+                <h5>Day 2</h5>
+                <p>Temp:</p>
+                <p>Wind:</p>
+                <p>Humidity:</p>
+              </div>
+              <div class="col-2 bg-dark text-white">
+                <h5>Day 3</h5>
+                <p>Temp:</p>
+                <p>Wind:</p>
+                <p>Humidity:</p>
+              </div>
+              <div class="col-2 bg-dark text-white">
+                <h5>Day 4</h5>
+                <p>Temp:</p>
+                <p>Wind:</p>
+                <p>Humidity:</p>
+              </div>
+              <div class="col-2 bg-dark text-white">
+                <h5>Day 5</h5>
+                <p>Temp:</p>
+                <p>Wind:</p>
+                <p>Humidity:</p>
+              </div>
+              <div class="col-2 bg-dark text-white">
+                <h5>Day 6</h5>
+                <p>Temp:</p>
+                <p>Wind:</p>
+                <p>Humidity:</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -25,6 +101,7 @@
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
+
     <script src="./assets/script.js"></script>
   </body>
 </html>
