started js file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section class="row">
         <div class="col-3">
           <h2>Search for a city</h2>
-          <form>
+          <form id="city-form">
             <div class="form-group mb-3">
               <input
                 type="text"
