--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 type="text"
                 class="form-control mb-3"
                 placeholder="Denver"
+                name="city-name"
               />
               <button
                 class="btn btn-primary w-100"
