current weather displays

--- a/index.html
+++ b/index.html
@@ -54,45 +54,18 @@
         <div class="col-9">
           <div class="row justify-content-between">
             <div class="row">
-              <div class="mb-4 border border-dark col-12" id="todays-weather">
-                <h1>Current City</h1>
-                <p>Temp</p>
-                <p>Wind</p>
-                <p>Humidity</p>
-              </div>
+              <div
+                class="mb-4 border border-dark col-12"
+                id="todays-weather"
+              ></div>
             </div>
             <div class="row justify-content-between 5-days-ahead">
               <h3 class="px-0">5 Day Forecast:</h3>
-              <div class="col-2 bg-dark text-white pb-3">
-                <h5>Day 2</h5>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
-              </div>
-              <div class="col-2 bg-dark text-white">
-                <h5>Day 3</h5>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
-              </div>
-              <div class="col-2 bg-dark text-white">
-                <h5>Day 4</h5>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
-              </div>
-              <div class="col-2 bg-dark text-white">
-                <h5>Day 5</h5>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
-              </div>
-              <div class="col-2 bg-dark text-white">
-                <h5>Day 6</h5>
-                <p>Temp:</p>
-                <p>Wind:</p>
-                <p>Humidity:</p>
-              </div>
+              <div class="col-2 bg-dark text-white pb-3" id="day1"></div>
+              <div class="col-2 bg-dark text-white" id="day2"></div>
+              <div class="col-2 bg-dark text-white" id="day3"></div>
+              <div class="col-2 bg-dark text-white" id="day4"></div>
+              <div class="col-2 bg-dark text-white" id="day5"></div>
             </div>
           </div>
         </div>
