--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           </form>
           <div>
             <hr />
-            <ol id="history-list"></ol>
+            <ol id="history-list">
+              <li><button class="btn btn-primary w-100">Test</button></li>
+            </ol>
           </div>
         </div>
 
