it refreshes the display before it renders another city

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div>
             <hr />
             <ol id="history-list">
-              <li><button class="btn btn-primary w-100">Test</button></li>
+              <li class="btn my-2 custom-button w-100">Test</li>
             </ol>
           </div>
         </div>
